--- a/assets/index.html
+++ b/assets/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    MomJong
+    Grandmahjong
   </title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen" type="text/css">
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row">
         <div class="login-title col-xs-3">
-          <strong>MomJong</strong>
+          <strong>Grandmahjong</strong>
         </div>
         <div class="col-xs-9 login-container">
           <div id="login-container-forms" class="col-xs-9 col-md-5 pull-right">
